# hello

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac  hello.desktop  helloworld.cc  helloworld.h  main.cc
icons/: Makefile.am
icons/16/: Makefile.am
icons/22/: Makefile.am
icons/256/: Makefile.am
icons/32/: Makefile.am
icons/48/: Makefile.am
icons/scalable/: Makefile.am
